Implement raising an error for unused local variables